--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "commonjs",
   "scripts": {
-    "test": "echo Error: no test specified && exit 0"
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
+    "jest": "26.6.3",
     "serverless": "2.18.0"
   },
   "dependencies": {
